tests/integration/snapshots/integration__conformance__n_object_several_trailing_commas.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"id":0,,,,,}
stderr ---
error: expected key, found `,`
 --> stdin:1:9
  |
1 | {"id":0,,,,,}
  |        -^
  |        |
  |        expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"id":0,,,,,}
1 + {"id":0,,,,}
  |
